# robot-pickup

./: .clang-format  CMakeLists.txt  LICENSE  app.cpp  app.h  main.cpp  state.cpp  state.h  utils.h  vcpkg.json
views/: main_view.cpp  main_view.h  view.h
vision/: aruco.cpp  aruco.h  camera.cpp  camera.h
widgets/: guards.h  viewport.cpp  viewport.h  widget.h
